--- a/foundations/js/rock-paper-scissors/index.html
+++ b/foundations/js/rock-paper-scissors/index.html
@@ -3,55 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script>
-        let humanScore = 0
-        let computerScore = 0
-
-        function getComputerChoice(){
-            const choices = ["rock", "paper", "scissors"];
-            const randomIndex = Math.floor(Math.random() * choices.length);
-            return choices[randomIndex];
-        }
-
-        function getHumanChoice(){
-            let input = prompt("What's your choice: ")
-            return input.toLowerCase()
-        }
-
-        function playRound(humanChoice, computerChoice){
-            //human player beats computer
-            if (humanChoice == "paper" && computerChoice == "rock" || humanChoice == "rock" && computerChoice == "scissors" || humanChoice == "scissors" && computerChoice == "rock"){
-                humanScore += 1
-                alert("You gain a point!")
-            }
-            //draw
-            else if (humanChoice == computerChoice){
-                alert("There is a draw!")
-            }
-            //human player loses
-            else{
-                alert("You lose this round!")
-            }
-        }
-        for (let i = 0; i < 5; ++i){
-            let humanChoice = getHumanChoice()
-            let computerChoice = getComputerChoice()
-            playRound(humanChoice, computerChoice)
-        }
-
-        if (humanScore > computerScore){
-            alert("You win the game!")
-        }
-        else if (humanScore == computerScore){
-            alert("There is a draw!")
-        }
-        else{
-            alert("You lose the game!")
-        }
-    </script>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="styles.css">
+    <title>Rock-Paper-Scissors Game</title>
 </head>
 <body>
-    
+    <!-- UI Section -->
+    <div class="running-score">
+        <span class="human-score"></span>
+        <span class="computer-score"></span>
+    </div>
+    <div class="action-buttons">
+        <button class="rock">
+            rock
+        </button>
+        
+        <button class="paper">
+            <i class='bx bxs-hand bx-tada' undefined ></i>
+        </button>
+        <button class="scissors">
+            <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=content_cut" />
+        </button>
+    </div>
+    <div class="result"></div>
+    <div class="winner"></div>
+
+    <script src="script.js"></script>
 </body>
 </html>
