Added footer and favicon

--- a/foundations/js/rock-paper-scissors/index.html
+++ b/foundations/js/rock-paper-scissors/index.html
@@ -6,6 +6,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="styles.css">
     <title>Rock-Paper-Scissors Game</title>
+    <link rel="icon" href="assets/favicon.png">
 </head>
 <body>
     <!-- UI Section -->
@@ -15,14 +16,14 @@
     </div>
     <div class="action-buttons">
         <button class="rock">
-            rock
+            <img src="assets/rock.png" alt="rock">
         </button>
         
         <button class="paper">
-            <i class='bx bxs-hand bx-tada' undefined ></i>
+            <img src="assets/paper.png" alt="paper">
         </button>
         <button class="scissors">
-            <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=content_cut" />
+            <img src="assets/scissors.png" alt="scissors">
         </button>
     </div>
     <div class="result"></div>
@@ -30,4 +31,8 @@
 
     <script src="script.js"></script>
 </body>
+
+<footer>
+    Made with &#x2764 by chiefoggy | Icons sourced from Flaticon
+</footer>
 </html>
